--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.52.3"
+    "react-slick": "^0.29.0",
+    "sass": "^1.52.3",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
