--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,8 @@
 REACT_APP_CINEVERSE_API_URL = {string}
+REACT_APP_API_KEY = {string}
+REACT_APP_AUTH_DOMAIN = {string}
+REACT_APP_PROJECT_ID = {string}
+REACT_APP_STORAGE_BUCKET = {string}
+REACT_APP_MESSAGING_SENDER_ID = {string}
+REACT_APP_APP_ID = {string}
+REACT_APP_MEASUREMENT_ID = {string}
