--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.52.3",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.4.18",
     "yup": "^0.32.11"
   },
   "scripts": {
