Update redux cinemas.slices fetchReadPremieres

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 REACT_APP_CINEVERSE_API_URL = {string}
+REACT_APP_CINEVERSE_API_TOKEN = {string}
 REACT_APP_API_KEY = {string}
 REACT_APP_AUTH_DOMAIN = {string}
 REACT_APP_PROJECT_ID = {string}
